[package]
name = "Mademoiselle_Entropia"
version = "1.11.4"
edition = "2021"
authors = ["Evgeney Knyazhev (SarK0Y) <sark0y@protonmail.com>"]
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/SarK0Y/Mademoiselle_Entropia"
description = "Extremely strong, stupidly simple and relatively fast symmetric cipher.. check out the Readne for explanation. Have a great day, Dear User 💯❤️"
#crate_type = ["staticlib"]
keywords = ["encryption", "symmetric", "exotic", "strong", "fast"]
categories = ["cryptography", "command-line-utilities"]
[lib]
crate-type = ["lib"]
[dependencies]
chrono = "0.4.31"
substring = "1.4.5"
num-traits = "0.2.17"
libc = "0.2.152" #"0.2.149"
#once_cell = "1.19.0"
unic-ucd = "0.9.0"
[features]
default=["in_dbg"]
in_dbg =[]
dbg0=[]
tam=[]
